--- a/src/intranetBundle/Resources/views/Default/bookRoom.html.twig
+++ b/src/intranetBundle/Resources/views/Default/bookRoom.html.twig
@@ -37,7 +37,7 @@ Aqui empieza el último bloque:
 
 <div style="height: 200px;border: 2px solid red;">
     <form action="{{ path('intranet_book')}}" method="get">
-        <input type="number" name="fecha" id="fecha">
+        <input type="date" name="fecha" id="fecha">
         <input type="submit" value="Elegir Room y Hora">
     </form>
 </div>
