--- a/src/intranetBundle/Resources/views/Default/createNewFeed.html.twig
+++ b/src/intranetBundle/Resources/views/Default/createNewFeed.html.twig
@@ -5,6 +5,7 @@
  <form action="{{path('intranet_insertnew')}}" method="post" style="border: 1px solid;width: 500px;">
         <label>TITLE:</label><input type="text" name="title" style="margin-left: 40px;"><br>
         <label>CONTENT:</label><input type="textarea" name="content" style="margin-left: 15px;"> <br>
+        <label>Channel:</label><input type="text" name="channel" style="margin-left: 15px;"value="develop"> <br>
                                      <input type="submit" value="CREATE">
                                      <input type="hidden" name="typeF" value="expenses">
                                      <input type="hidden" name="actualDate">
