--- a/src/intranetBundle/Resources/views/Default/formVacations.html.twig
+++ b/src/intranetBundle/Resources/views/Default/formVacations.html.twig
@@ -2,13 +2,12 @@
 
  {% block contenido %}
 <h3>VACATIONS</h3><br>
- <form action="vVacation.php" method="post" style="border: 1px solid;width: 500px;">
-       <label>From: </label><input type='date' id="from"name="from" min="<?php echo date("Y-m-d");?>" value="<?php echo date("Y-m-d");?>"><i>default: TODAY</i><BR>
-       <label>to: </label><input type='date' id="to"name="to" max="<?php echo date("Y-m-d", strtotime("+6 month")); ?>" value="<?php echo date("Y-m-d", strtotime("+1 week")); ?>">
-       <i>default: 1 WEEK, max 3 months</i><BR>
+ <form action="{{ path('intranet_f') }}" method="post" style="border: 1px solid;width: 500px;">
+       <label>From:</label><input type='date' id="from" name="from"><BR>
+       <label>to: </label><input type='date' id="to" name="to" >
+       <BR>
                                     <input type="submit" value="Modify">
                                     <input type="hidden" name="typeF" value="vacation">
-                                    <input type="hidden" name="actualDate" value="<?php echo date("Y-m-d H:i:s");?>">
   </form>
 
 
