--- a/src/intranetBundle/Resources/views/Default/incomingForms.html.twig
+++ b/src/intranetBundle/Resources/views/Default/incomingForms.html.twig
@@ -1,33 +1,112 @@
 {% extends 'intranetBundle::layout.html.twig' %}
 
  {% block contenido %}
-
- <!-- <form action="vHours.php" method="post" style="border: 1px solid;width: 500px;">
-        <label>Number of hours: </label><input type='number' name="numhours" id="numhours" min="1" max="50"><i>min:1, max:20</i><BR>
-        <label>Between: </label><input type='date' id="betw"name="betw" min="<?php echo date("Y-m-d");?>" value="<?php echo date("Y-m-d");?>"><i>default: TODAY</i><BR>
-        <label>and: </label><input type='date' id="and"name="and" max="<?php echo date("Y-m-d", strtotime("+3 month")); ?>" value="<?php echo date("Y-m-d", strtotime("+1 week")); ?>">
-        <i>default: 1 WEEK, max 3 months</i><BR>
-                                     <input type="submit" value="Modify">
-                                     <input type="hidden" name="typeF" value="hours">
-                                     <input type="hidden" name="actualDate" value="<?php echo date("Y-m-d H:i:s");?>">
-   </form>
--->
-
+<b>TABLA FORMULARIOS HORAS</b>
 <table border=1>
 <tr >
     <th>Type</th>
     <th>USER</th>
     <th>LOGIN</th>
     <th>DATE</th>
+    <th>READ</th>
 </tr>
-{% for new in listIncomingForms %}
+{% for form in listIncomingFormsH %}
+{% for u in relationHours %}
+{% if u.idForm==form.id %}
 <tr>
-    <td style="padding-left: 10px;padding-right: 10px;">{{ new.type }}</td>
-    <td style="padding-left: 10px;padding-right: 10px;">{{ new.user }}</td>
-    <td style="padding-left: 10px;padding-right: 10px;">{{ new.login }}</td>
-    <td style="padding-left: 10px;padding-right: 10px;">{{ new.send }}</td>
+    <td style="padding-left: 10px;padding-right: 10px;">{{ form.type }}</td>
+    <td style="padding-left: 10px;padding-right: 10px;">{{ u.login }}</td>
+    <td style="padding-left: 10px;padding-right: 10px;">{{ form.numHours }}</td>
+    <td style="padding-left: 10px;padding-right: 10px;">{{ form.send }}</td>
+    <td style="padding-left: 10px;padding-right: 10px;">{{ form.status }}</td>
+</tr>{% endif %}
+{% endfor %}{% endfor %}
+</table>
+
+<hr>
+
+<b>TABLA FORMULARIOS VACATIONS</b>
+<table border=1>
+<tr>
+   <th>USER</th>
+   <th>LOGIN</th>
+   <th>DATE</th>
+   <th>READ</th>
+   <th>FROM</th>
+   <th>TO</th>
 </tr>
-{% endfor %}
+{% for form in listIncomingFormsV %}
+{% for u in relationVacations %}
+{% if u.idForm==form.id %}
+<tr>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ u.login }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ u.login }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.send }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.status }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.date1 }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.date2 }}</td>
+</tr>{% endif %}
+{% endfor %}{% endfor %}
+
+</table>
+
+<hr>
+
+<b>TABLA FORMULARIOS EXPENSES</b>
+<table border=1>
+<tr>
+   <th>USER</th>
+   <th>LOGIN</th>
+   <th>DATE</th>
+   <th>READ</th>
+   <th>COMPANY</th>
+   <th>CONCEPT</th>
+   <th>AMOUNT</th>
+</tr>
+{% for form in listIncomingFormsE %}
+{% for u in relationExpenses %}
+{% if u.idForm==form.id %}
+<tr>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ u.login }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ u.login }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.send }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.status }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.company }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.concept }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.amount }} €</td>
+</tr>{% endif %}
+{% endfor %}{% endfor %}
+
+</table>
+
+<hr>
+
+<b>TABLA FORMULARIOS TRIPS</b>
+<table border=1>
+<tr>
+   <th>USER</th>
+   <th>LOGIN</th>
+   <th>DATE</th>
+   <th>READ</th>
+   <th>FROM</th>
+   <th>TO</th>
+   <th>PLACE</th>
+   <th>REASON</th>
+</tr>
+{% for form in listIncomingFormsT %}
+{% for u in relationTrips %}
+{% if u.idForm==form.id %}
+<tr>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ u.login }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ u.login }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.send }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.status }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.date1 }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.date2 }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.place }}</td>
+   <td style="padding-left: 10px;padding-right: 10px;">{{ form.reasons }}</td>
+</tr>{% endif %}
+{% endfor %}{% endfor %}
 
 </table>
 
