--- a/src/intranetBundle/Resources/views/Error/error_login.html.twig
+++ b/src/intranetBundle/Resources/views/Error/error_login.html.twig
@@ -24,7 +24,8 @@ LOGIN; NOMBRE; APELLIDOS; LANGUE; ROL; FOTO; notifications
       <BR>
 
       <label>{% trans %}Photo{% endtrans %}</label><input type='file' id="myPhoto"name="myPhoto"><img src=""><BR>
-      <label class="radio">{% trans %}Notifications{% endtrans %}</label><input type='radio' id="myNotification" name="myNotifications" value="1"  ><label for="myNotification">ON</label>
+      <label class="radio">{% trans %}Notifications{% endtrans %}</label>
+                                  <input type='radio' id="myNotification" name="myNotifications" value="1"><label for="myNotification">ON</label>
                                   <input type='radio' id="myNotifications" name="myNotifications" value="0"   checked ><label for="myNotifications">OFF</label><br>
                                   <input type="submit" value="{% trans %}Modify{% endtrans %}">
  </form>
