--- a/src/intranetBundle/Resources/views/Default/news.html.twig
+++ b/src/intranetBundle/Resources/views/Default/news.html.twig
@@ -15,7 +15,12 @@
     <td style="padding-left: 10px;padding-right: 10px;">{{ n.date|date('Y-m-d')  }}</td>
     <td style="padding-left: 10px;padding-right: 10px;">{{ n.time|date('H:i') }}</td>
     <td style="padding-left: 10px;padding-right: 10px;">{{ n.title }}</td>
-    <td style="padding-left: 10px;padding-right: 10px;">{{ n.content }}</td>
+    <td style="padding-left: 10px;padding-right: 10px;">
+          <form action='{{ path('intranet_crudnew') }}' method='post'>
+                <input type="submit" value="VER" >
+                <input type="hidden" value="{{ n.content }}" name="content">
+          </form>
+    </td>
 </tr>
 {% endfor %}
 </table>
