--- a/src/intranetBundle/Resources/views/Default/newuser.html.twig
+++ b/src/intranetBundle/Resources/views/Default/newuser.html.twig
@@ -8,7 +8,7 @@
       Nombre: <input type='text' name="myName" id="myName" value="" class="form-control">
       Apellidos: <input type='text' id="mySurname"name="mySurname" value="" class="form-control"><BR>
       <label>{% trans %}Language{% endtrans %}</label>
-            <select class="form-control" name="myLang">
+            <select class="form-control" name="myLang" >
               <option value="es">ES</option>
               <option value="en">EN</option>
               <option value="fr">FR</option>
@@ -20,7 +20,8 @@
       <label class="radio">{% trans %}Notifications{% endtrans %}</label>
                                   <input type='radio' id="myNotification" name="myNotifications" value="1"><label for="myNotification">ON</label>
                                   <input type='radio' id="myNotifications" name="myNotifications" value="0"   checked ><label for="myNotifications">OFF</label><br>
-                                  <input type="submit" value="{% trans %}Modify{% endtrans %}">
+
+                                  <input type="submit" value="{% trans %}new{% endtrans %}">
                                   <input type="hidden" name="webCuisine" value="test" >
  </form>
 
