--- a/src/intranetBundle/Resources/views/Default/userManagement.html.twig
+++ b/src/intranetBundle/Resources/views/Default/userManagement.html.twig
@@ -14,7 +14,7 @@
     <td style="padding-left: 10px;padding-right: 10px;">
         <form action='{{ path('intranet_settings') }}' method='post'>
               <input type="submit" value="{{ intrauser.login }}" name="login">
-              <input type="hidden" value="webCuisine" name="test">
+              <input type="hidden" value="webCuisine" name="isAdmin">
         </form>
     </td>
     <td style="padding-left: 10px;padding-right: 10px;">{{ intrauser.nameU }}</td>
