--- a/src/intranetBundle/Resources/views/Default/createNewFeed.html.twig
+++ b/src/intranetBundle/Resources/views/Default/createNewFeed.html.twig
@@ -4,12 +4,15 @@
 <h3>CREATE A NEW New</h3><br>
  <form action="{{path('intranet_insertnew')}}" method="post" style="border: 1px solid;width: 500px;">
         <label>TITLE:</label><input type="text" name="title" style="margin-left: 40px;"><br>
-        <label>CONTENT:</label><input type="textarea" name="content" style="margin-left: 15px;"> <br>
-        <label>Channel:</label><input type="text" name="channel" style="margin-left: 15px;"value="develop"> <br>
-                                     <input type="submit" value="CREATE">
-                                     <input type="hidden" name="typeF" value="expenses">
+        <label>CONTENT:</label><input type="textarea" name="content" style="margin-left: 13px;"> <br>
+        <label>Channel:</label>
+
+   {% for c in channels %}
+       <input type="checkbox" name="{{ c.name }}" value="{{ c.name }}" style="margin-left: 17px;">{{ c.name }}
+   {% endfor %}<br>
+
+                                       <input type="submit" value="CREATE">
+                                       <input type="hidden" name="typeF" value="expenses">
    </form>
-
-
 
 {% endblock %}
