--- a/src/intranetBundle/Resources/views/Default/createNewTask.html.twig
+++ b/src/intranetBundle/Resources/views/Default/createNewTask.html.twig
@@ -1,12 +1,18 @@
 {% extends 'intranetBundle::layout.html.twig' %}
 
  {% block contenido %}
-<h3>CREATE A NEW New</h3><br>
- <form action="{{path('intranet_inserttask')}}" method="post" style="border: 1px solid;width: 500px;">
+<h3>CREATE A NEW TASK</h3><br>
+ <form action="{{path('intranet_insertTask')}}" method="post" style="border: 1px solid;width: 500px;">
         <label>TITLE:</label><input type="text" name="title" style="margin-left: 40px;"><br>
         <label>CONTENT:</label><input type="textarea" name="content" style="margin-left: 15px;"> <br>
-        <label>USERS:</label><input type="text" name="login">
-        <i>Aquí habrá que meter los usuarios</i><br>
+        <label>USERS:</label>
+{% for u in users %}
+    <input type="checkbox" name="{{ u.login }}" value="{{ u.login }}">{{ u.login }}
+{% endfor %}
+
+<!--        <i>Aquí habrá que meter los usuarios</i>
+-->
+<br>
                                      <input type="submit" value="CREATE">
                                      <input type="hidden" name="WHO CREATE">
    </form>
