--- a/src/intranetBundle/Resources/views/Default/settings.html.twig
+++ b/src/intranetBundle/Resources/views/Default/settings.html.twig
@@ -1,21 +1,29 @@
 {% extends 'intranetBundle::layout.html.twig' %}
 
  {% block contenido %}
-
+CONTENIDO DEL USUARIO line.4
 <form action="{{ path('intranet_cruduser') }}" method="post" style="border: 1px solid;width: 500px;">
       <label>{% trans %}Name{% endtrans %}</label><input type='text' name="myName" id="myName" value="{{ me.nameU }}"><BR>
-      <label>{% trans %}Surname{% endtrans %}</label><input type='text' id="mySurname"name="mySurname" value="{{ me.surnameU }}"><BR>
-      <label>{% trans %}Language{% endtrans %}</label><input type='text' id="myLanguage"name="myLanguage" value="{{ me.lang }}"><BR>
-      <label>{% trans %}Photo{% endtrans %}</label><input type='file' id="myPhoto"name="myPhoto"><img src="{{ me.photo }}"><BR>
-      <label>{% trans %}Onboard{% endtrans %}</label><input type='CHECKBOX' id="onb" name="onb"><BR>
-      <label>{% trans %}Notifications{% endtrans %}</label><input type='radio' id="myNotification" name="myNotifications" value="on" {% if me.notifications==1 %} checked {% endif %} ><label for="myNotification">ON</label>
-                                   <input type='radio' id="myNotifications" name="myNotifications" value="off"  {% if me.notifications==0 %} checked {% endif %}><label for="myNotifications">OFF</label><br>
+      <label>{% trans %}Surname{% endtrans %}</label><input type='text' id="mySurname" name="mySurname" value="{{ me.surnameU }}"><BR>
+      <label>{% trans %}Language{% endtrans %}</label><br>
+                <input type='radio' id="myLanguage" name="myLanguage" value="es" {% if me.lang=="es" %} checked {% endif %}><label for="myLanguage">ES</label><BR>
+                <input type='radio' id="myLanguage" name="myLanguage" value="en" {% if me.lang=="en" %} checked {% endif %}><label for="myLanguage">EN</label><BR>
+                <input type='radio' id="myLanguage" name="myLanguage" value="fr" {% if me.lang=="fr" %} checked {% endif %}><label for="myLanguage">FR</label><BR>
+                <input type='radio' id="myLanguage" name="myLanguage" value="de" {% if me.lang=="de" %} checked {% endif %}><label for="myLanguage">DE</label><BR>
+      <label>{% trans %}Photo{% endtrans %}</label><input type='file' id="myPhoto" name="myPhoto"><img src="{{ me.photo }}"><BR>
+
+      <label>{% trans %}Notifications{% endtrans %}</label>
+                <input type='radio' id="myNotifications" name="myNotifications" value="1" {% if me.notifications==1 %} checked {% endif %} ><label for="myNotification">ON</label>
+                <input type='radio' id="myNotifications" name="myNotifications" value="0"  {% if me.notifications==0 %} checked {% endif %}><label for="myNotifications">OFF</label><br>
+
                                    <input type="submit" value="{% trans %}Modify{% endtrans %}" name="update">
 <!-- SI NO SOY YO, PUEDO BORRAR EL USUARIO YA QUE SOY ADMIN -->
 {# if no soy yo#}
                                    <input type="submit" value="{% trans %}DELETE{% endtrans %}" name="delete">
 {# endif #}
+
                                    <input type="text" value="{{ me.login }}" name="myLogin" readonly>
+                                   <input type="hidden" value="{{ me.id }}" name="id">
  </form>
 
 
